BART V1.1: add irwin-hall; improve file storage; add absolute path; fix a bug on Wilcoxon

--- a/BART/bart.conf
+++ b/BART/bart.conf
@@ -1,3 +1,9 @@
 [path]
-hg38_library_dir =  
-mm10_library_dir = 
+
+hg38_library_dir = /m/cphg-zang/zw5j/env/bart/library/library_DC2016_bz2 
+mm10_library_dir = /m/cphg-zang/zw5j/env/bart/library/library_DC2016_bz2
+
+
+
+
+
